# traffic-flow-flask-app

./: README.md  pyproject.toml  requirements.txt  traffic_data.csv
src/traffic_app_flask/: __init__.py  form.py  models.py  routes.py
src/traffic_app_flask/dash_app/: dashboard.py  traffic-flow-borough_dash.xlsx
src/traffic_app_flask/database/: create_db.py  traffic-flow-borough.xlsx  traffic-flow-uk.xls  traffic.db
src/traffic_app_flask/static/: custom.css
src/traffic_app_flask/templates/: base.html  boroughtraffic.html  dashboard.html  data_request.html  index.html  login.html  ulezcheck.html
tests/: conftest.py  test_dashboard.py  test_datarequest.py  test_flow.py  test_forms.py  test_homepage.py  test_routes.py  test_starter.py  test_ulezcheck.py
